forgot to commit last work

--- a/notebooks/average_data_for_specific_day.ipynb
+++ b/notebooks/average_data_for_specific_day.ipynb
@@ -302,17 +302,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def test_avg_data_day(chosen_day):\n",
+    "    day_name = ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday','sunday']\n",
+    "    for ind, day in enumerate(day_name):\n",
+    "        if chosen_day.lower() == day:\n",
+    "            day_num = ind\n",
+    "    \n",
+    "    list_of_data = []\n",
+    "    for x in boulder_data.current_time.unique():\n",
+    "        date = x\n",
+    "        day = datetime.strptime(date, '%Y/%m/%d %H:%M').weekday()\n",
+    "        if day == day_num:\n",
+    "            list_of_data.append(x)\n",
+    "    test_ave_data = boulder_data[boulder_data['current_time'].isin(list_of_data)]\n",
+    "\n",
+    "    # all_gyms = []\n",
+    "    # data = [[], [], [], [], [], []]\n",
+    "    data = {'gym_name':[],\n",
+    "            'current_time':[],\n",
+    "            'occupancy':[],\n",
+    "            'waiting':[],\n",
+    "            'weather_temp':[],\n",
+    "            'weather_status':[]}\n",
+    "    for x in test_ave_data.gym_name.unique():\n",
+    "        # do ave_data here for specific times\n",
+    "        # ? all_gyms.append(x)\n",
+    "        # or create new df to add data to\n",
+    "        pass\n",
+    "\n",
+    "    return all_ave_data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  col1\n",
+       "0    1"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>col1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 74
+    }
+   ],
+   "source": [
+    "data = {}\n",
+    "df = pd.DataFrame(data) \n",
+    "df['col1'] = [\"1\"]\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
