--- a/notebooks/average_data_for_specific_day.ipynb
+++ b/notebooks/average_data_for_specific_day.ipynb
@@ -123,11 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def avg_data_day(chosen_day):\n",
+    "    \"\"\"returns the all of the data for a specific day of the week\"\"\"\n",
     "    day_name = ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday','sunday']\n",
     "    for ind, day in enumerate(day_name):\n",
     "        if chosen_day.lower() == day:\n",
@@ -339,26 +340,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  col1\n",
-       "0    1"
+       "  gym_name current_time  occupancy  waiting  weather_temp  weather_status\n",
+       "0        1            1        NaN      NaN           NaN             NaN"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>col1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 74
+     "execution_count": 78
     }
    ],
    "source": [
-    "data = {}\n",
+    "data = {'gym_name':[],\n",
+    "            'current_time':[],\n",
+    "            'occupancy':[],\n",
+    "            'waiting':[],\n",
+    "            'weather_temp':[],\n",
+    "            'weather_status':[]}\n",
     "df = pd.DataFrame(data) \n",
-    "df['col1'] = [\"1\"]\n",
+    "df['gym_name'] = [\"1\"]\n",
+    "df['current_time'] = [\"1\"]\n",
     "df"
    ]
   },
